Add Flavortown UI module with mood-based styling and animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>…Really?"</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./cartoon.css" />
+    <link rel="stylesheet" href="./flavortown.css" />
   </head>
   <body>
     <div class="parallax" aria-hidden="true">
@@ -30,7 +31,6 @@
             <option>Maybe a button?</option>
             <option>Absolutely not</option>
           </select>
-          <button type="button" id="test-reaction">Test Reaction</button>
         </div>
         <h3>Non-interactive heading (click me)</h3>
         <div class="box">
@@ -72,6 +72,10 @@
     </aside>
 
     <div class="toast" id="attitude-toast" aria-live="polite"></div>
+
+    <div id="flame-burst" aria-hidden="true">
+      <div class="flame"></div>
+    </div>
 
     <div class="mascot" id="mascot" aria-hidden="true" data-level="Neutral">
       <div class="mascot-face">
