Add mascot reactions and mood layout features with animations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./cartoon.css" />
     <link rel="stylesheet" href="./flavortown.css" />
+    <link rel="stylesheet" href="./mascot.css" />
+    <link rel="stylesheet" href="./judgment.css" />
+    <link rel="stylesheet" href="./moodLayout.css" />
   </head>
   <body>
     <div class="parallax" aria-hidden="true">
@@ -58,7 +61,7 @@
       </section>
 
       <footer class="footer">
-        <div class="message" id="judgment-message">…</div>
+        <div class="message" id="judgment">…</div>
         <small>Try switching tabs. We’ll notice.</small>
       </footer>
     </div>
